[gd_scene load_steps=8 format=3 uid="uid://caoqx6ppv3gyj"]

[ext_resource type="Script" uid="uid://wj2veakjtbby" path="res://other.gd" id="1_egnah"]
[ext_resource type="Texture2D" uid="uid://bedue4nb5dkgn" path="res://carpincho.png" id="2_mk2tb"]
[ext_resource type="Texture2D" uid="uid://cg5dor0ax8che" path="res://ctclogo.png" id="3_yivuw"]
[ext_resource type="AudioStream" uid="uid://dc7oxwlixbuj7" path="res://characters/clicksoundeffect.mp3" id="5_a7qjh"]
[ext_resource type="Texture2D" uid="uid://d7fv1a3k42ow" path="res://ctcoin.png" id="6_tupus"]
[ext_resource type="Texture2D" uid="uid://bec2vkiiskuju" path="res://games/mathtuf/mticon.png" id="6_yxl3c"]
[ext_resource type="Texture2D" uid="uid://bdylf6qydaho" path="res://ctcoinsymbol.png" id="7_q3sf6"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_egnah")

[node name="Carpincho" type="Sprite2D" parent="."]
position = Vector2(598, 401)
scale = Vector2(0.985742, 0.877865)
texture = ExtResource("2_mk2tb")

[node name="Ctclogo" type="Sprite2D" parent="."]
position = Vector2(962, 66)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_yivuw")

[node name="Username" type="TextEdit" parent="."]
offset_left = 8.0
offset_top = 9.0
offset_right = 271.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
text = "User"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_a7qjh")

[node name="Coins" type="Label" parent="."]
offset_left = 513.0
offset_top = 507.0
offset_right = 645.0
offset_bottom = 583.0
theme_override_font_sizes/font_size = 50
text = "coins"
horizontal_alignment = 1

[node name="CtcoinButton" type="TextureButton" parent="."]
offset_left = 542.0
offset_top = 569.0
offset_right = 1117.0
offset_bottom = 1114.0
scale = Vector2(0.13, 0.13)
texture_normal = ExtResource("6_tupus")

[node name="SettingsButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 86.0
offset_right = 106.0
offset_bottom = 179.0
text = "< BACK"

[node name="MathTufButton" type="TextureButton" parent="."]
offset_left = 144.0
offset_top = 86.0
offset_right = 1424.0
offset_bottom = 1366.0
scale = Vector2(0.075, 0.075)
texture_normal = ExtResource("6_yxl3c")

[node name="MathTufName" type="Label" parent="."]
offset_left = 138.0
offset_top = 181.0
offset_right = 245.0
offset_bottom = 230.0
theme_override_font_sizes/font_size = 16
text = "Mathematic
Tuf"
horizontal_alignment = 1

[node name="MathTufPrice" type="Label" parent="."]
offset_left = 165.0
offset_top = 227.0
offset_right = 200.0
offset_bottom = 255.0
theme_override_font_sizes/font_size = 20
text = "500"
horizontal_alignment = 1

[node name="Ctcoinsymbol" type="Sprite2D" parent="."]
position = Vector2(209, 242)
scale = Vector2(0.05, 0.05)
texture = ExtResource("7_q3sf6")

[connection signal="pressed" from="SettingsButton" to="." method="back_button_pressed"]
[connection signal="pressed" from="MathTufButton" to="." method="math_tuf_button_pressed"]
